# Find_It_SSU

./: CMakeLists.txt  CMakePresets.json  MainWindow.ui  README.md  app_resources.qrc  database_manager.cpp  database_manager.h  file_manager.cpp  file_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  tag_manager.cpp  tag_manager.h
libs/sqlite3/: sqlite3.h  sqlite3.lib
